--- a/day_8outbreak.ipynb
+++ b/day_8outbreak.ipynb
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "ukLEsMTv6ttF"
       },
@@ -54,9 +54,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "2c1bf382-4785-4091-b311-b306e8b0ea14"
+        "outputId": "50f69c95-b9d8-4719-f9c9-30287dbec6a6"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -71,7 +71,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-324b450c-70e7-4418-8031-051c517ea3c5\">\n",
+              "  <div id=\"df-7f3a4510-83cc-476c-b7ea-e03a829e6269\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -154,7 +154,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-324b450c-70e7-4418-8031-051c517ea3c5')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7f3a4510-83cc-476c-b7ea-e03a829e6269')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -205,12 +205,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-324b450c-70e7-4418-8031-051c517ea3c5 button.colab-df-convert');\n",
+              "          document.querySelector('#df-7f3a4510-83cc-476c-b7ea-e03a829e6269 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-324b450c-70e7-4418-8031-051c517ea3c5');\n",
+              "          const element = document.querySelector('#df-7f3a4510-83cc-476c-b7ea-e03a829e6269');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -233,7 +233,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 4
         }
       ]
     },
@@ -247,9 +247,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "To0616D67VSD",
-        "outputId": "42fe71c4-a694-482e-f56a-dbd9b9338b61"
+        "outputId": "31a9d587-ac47-4ce1-bc64-efec31b22126"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -266,7 +266,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 5
         }
       ]
     },
@@ -280,9 +280,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fwaviHox66yL",
-        "outputId": "fc5f295d-54ed-4aec-b90c-f1b932276727"
+        "outputId": "b9ab3a6f-9cc4-427f-a2fe-834f62e76797"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -317,9 +317,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 864
         },
-        "outputId": "7163b242-c7c7-4c95-b210-ceeb7aac8fe5"
+        "outputId": "b1beeb25-79db-442e-dae2-21b12cb4da33"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -355,7 +355,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4d2ea2c9-86fa-496a-add9-cb8f2db28cd0\">\n",
+              "  <div id=\"df-cb28329c-37a0-458d-bcd5-94e2e9b72e32\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -648,7 +648,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4d2ea2c9-86fa-496a-add9-cb8f2db28cd0')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cb28329c-37a0-458d-bcd5-94e2e9b72e32')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -699,12 +699,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-4d2ea2c9-86fa-496a-add9-cb8f2db28cd0 button.colab-df-convert');\n",
+              "          document.querySelector('#df-cb28329c-37a0-458d-bcd5-94e2e9b72e32 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-4d2ea2c9-86fa-496a-add9-cb8f2db28cd0');\n",
+              "          const element = document.querySelector('#df-cb28329c-37a0-458d-bcd5-94e2e9b72e32');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -727,7 +727,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 7
         }
       ]
     },
@@ -750,9 +750,9 @@
           "height": 297
         },
         "id": "ePeyJawn73lK",
-        "outputId": "85ed87fa-4b3d-432b-b11e-afacba3e034d"
+        "outputId": "dbc1d3d8-392a-4747-bce2-a92a3e511b7d"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -776,7 +776,7 @@
       "metadata": {
         "id": "xztjRZiV8Lcm"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -796,9 +796,9 @@
           "height": 297
         },
         "id": "wZ0RoHep8NLb",
-        "outputId": "5c09b38c-56d1-4395-a29c-7581e6a00a2f"
+        "outputId": "96f73d99-4e54-4c3e-8878-67c1fccff7b7"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -827,7 +827,7 @@
       "metadata": {
         "id": "F6S3ysLE8_Zw"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -841,9 +841,9 @@
           "height": 770
         },
         "id": "hLC8vgPK8_qV",
-        "outputId": "7939ea09-dc6d-4f3a-d46e-2e096f53cb4d"
+        "outputId": "e5d6d116-9061-4c2a-bbde-cdc18a07d09e"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -876,7 +876,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a86035ef-349e-48c4-82a0-b164c96a7140\">\n",
+              "  <div id=\"df-2a2ad78a-1a40-4e40-ae2e-b82a5db413b7\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1139,7 +1139,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a86035ef-349e-48c4-82a0-b164c96a7140')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2a2ad78a-1a40-4e40-ae2e-b82a5db413b7')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1190,12 +1190,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a86035ef-349e-48c4-82a0-b164c96a7140 button.colab-df-convert');\n",
+              "          document.querySelector('#df-2a2ad78a-1a40-4e40-ae2e-b82a5db413b7 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a86035ef-349e-48c4-82a0-b164c96a7140');\n",
+              "          const element = document.querySelector('#df-2a2ad78a-1a40-4e40-ae2e-b82a5db413b7');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1218,7 +1218,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 12
         }
       ]
     },
@@ -1232,9 +1232,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eS-wLub_9IyA",
-        "outputId": "07f02875-b1f3-4eb2-e1fd-5ad39b0e03c7"
+        "outputId": "b7ce5ab1-e7c7-45a3-9e97-6700e02fce93"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1244,7 +1244,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 13
         }
       ]
     },
@@ -1259,9 +1259,9 @@
           "height": 770
         },
         "id": "X3obDHBq9Rci",
-        "outputId": "30b1b5e1-f270-43b7-c89f-4fe75c7e2cdb"
+        "outputId": "f149b5ca-7f58-49c2-c70d-341ea85038fb"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1294,7 +1294,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1f099f61-108b-44b6-8f12-878b4cc57893\">\n",
+              "  <div id=\"df-1e29f301-1578-4cb8-99d5-086d9ea72181\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1557,7 +1557,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1f099f61-108b-44b6-8f12-878b4cc57893')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1e29f301-1578-4cb8-99d5-086d9ea72181')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1608,12 +1608,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-1f099f61-108b-44b6-8f12-878b4cc57893 button.colab-df-convert');\n",
+              "          document.querySelector('#df-1e29f301-1578-4cb8-99d5-086d9ea72181 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-1f099f61-108b-44b6-8f12-878b4cc57893');\n",
+              "          const element = document.querySelector('#df-1e29f301-1578-4cb8-99d5-086d9ea72181');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1636,7 +1636,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 14
         }
       ]
     },
@@ -1653,11 +1653,11 @@
         "id": "NyXoJ2nu9WzQ",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 686
+          "height": 1000
         },
-        "outputId": "89fd47f3-3b55-4a54-b958-b24b03c4e244"
+        "outputId": "c34441a0-f32c-4907-e3fc-664260d12c7a"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -1671,11 +1671,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<seaborn.axisgrid.PairGrid at 0x7f7040c79850>"
+              "<seaborn.axisgrid.PairGrid at 0x7fdbadb37510>"
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 15
         },
         {
           "output_type": "display_data",
@@ -1703,7 +1703,7 @@
       "metadata": {
         "id": "qYvMM_i29aa6"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -1716,7 +1716,7 @@
       "metadata": {
         "id": "A9ywW02P9dR9"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -1729,7 +1729,7 @@
       "metadata": {
         "id": "XRL9cX179f41"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -1742,9 +1742,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tkWEXjZm9jNg",
-        "outputId": "d297fccb-ebb6-49af-ba50-b4054030f1c9"
+        "outputId": "4fbbff6b-1220-4634-9f9f-ffcff9a9b3a3"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1799,7 +1799,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 19
         }
       ]
     },
@@ -1813,7 +1813,7 @@
       "metadata": {
         "id": "Hk0pjm7Q9l5s"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -1825,7 +1825,7 @@
       "metadata": {
         "id": "gwSf32Ly9owo"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -1837,7 +1837,7 @@
       "metadata": {
         "id": "Mciv1rF_9rr2"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -1850,9 +1850,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vrjMWA1e9xTo",
-        "outputId": "277cebcb-0f5c-4b25-d9d4-062d09c0e5d4"
+        "outputId": "77c4982d-5850-4cf5-a21d-d0632bea04ac"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -1870,7 +1870,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 23
         }
       ]
     },
@@ -1885,9 +1885,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jMT2Dea79y03",
-        "outputId": "a8586f98-1342-483f-8659-c02ec1cd11b5"
+        "outputId": "796cbed8-63eb-4a36-c30b-2bfd4f7b21b1"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1897,7 +1897,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 24
         }
       ]
     },
@@ -1908,12 +1908,12 @@
       ],
       "metadata": {
         "id": "_btwlosZ92SZ",
-        "outputId": "327e9832-e3dd-4919-d491-c9771d84d6ce",
+        "outputId": "bd21815e-84d0-47e6-82d0-dd8a8c8c43d2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -1931,12 +1931,12 @@
       ],
       "metadata": {
         "id": "7H3P6Dkrkq_w",
-        "outputId": "84b312a7-233b-44bb-f171-93eea1db51cd",
+        "outputId": "f657f758-f3ca-4b1b-d248-271b0e1f66dd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -1954,10 +1954,22 @@
         "print(accuracy)"
       ],
       "metadata": {
-        "id": "hXHZEtiHktsY"
+        "id": "hXHZEtiHktsY",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "57663fdf-4fef-4c1d-bd78-86e37ba5116d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "86.95652173913044\n"
+          ]
+        }
+      ]
     }
   ]
 }
